# dwmLock

./: Cargo.toml  README.md
.github/workflows/: windows-build.yml
docs/: architecture.md
src/: blur.rs  capture.rs  config.rs  game.rs  keyboard.rs  lib.rs  main.rs  monitors.rs  notifications.rs  render.rs  settings.rs  settings_dialog.rs  state.rs
src/ui/: mod.rs  settings_dialog.rs  window.rs
tests/: cucumber.rs
tests/features/: monitor.feature  settings.feature
