[package]
name = "dwmlock"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.19"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
rand = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
